# path-algebra-gnn

./: .gitignore  README.md  environment.yml  pyproject.toml  run_bottleneck_gcn_gin.py  run_bottleneck_multiseed.py  run_lrgb.py  run_lrgb_multiseed.py  run_quotient_multiseed.py  run_ring.py  run_ring_multiseed.py
configs/: bottleneck.yaml  neighborsmatch.yaml
notebooks/: 00_env_check.ipynb  01_neighborsmatch.ipynb  02_lrgb_peptides.ipynb  03_diagnostic.ipynb  04_bottleneck_oversquashing.ipynb  05_walk_attention.ipynb  06_ring_transfer.ipynb
notebooks/didactic/: D0_playground.ipynb  D1_what_is_oversquashing.ipynb  D2_quivers_and_paths.ipynb  D3_paths_are_messages.ipynb  D4_walk_operator_is_attention.ipynb  D5_putting_it_together.ipynb  README.md
notebooks/en/: P0_playground.ipynb  P1_oversquashing.ipynb  P2_quivers_and_paths.ipynb  P3_paths_are_messages.ipynb  P4_walk_is_attention.ipynb  P5_putting_it_together.ipynb  README.md  walk_attention_tutorial.ipynb
notebooks/es/: P0_playground.ipynb  P1_oversquashing.ipynb  P2_quivers_y_caminos.ipynb  P3_caminos_son_mensajes.ipynb  P4_walk_es_atencion.ipynb  P5_juntandolo_todo.ipynb  README.md  walk_attention_tutorial.ipynb
paper/: walk_attention.tex
paper/en/: walk_attention.bib  walk_attention.tex  walk_attention_v2.tex
paper/es/: .gitignore  walk_attention.bib  walk_attention.tex  walk_attention_v2.tex
paper/sections/: algebra.tex  conclusion.tex  experiments.tex  model.tex
results/tables/: bottleneck_gcn_gin_5seeds.csv  bottleneck_main_5seeds.csv  lrgb_peptides_func.csv  (+4 more)
tests/: test_walk_operators.py
(+22 files in other folders)
